Myriad/wwwroot/css/myriad.20.12.06.css
/* ... */
.hiddendetail + .hiddendetail::before{content:"";}
.editparagraph {color:#4477a1; font-size:small;cursor: pointer;   vertical-align: baseline;position: relative;top: -0.4em;}
.dropcap {float: left;font-size: 3em;line-height: 0.5;margin: 0.205em 0 0 0;padding-bottom: .25rem;padding-right:.5rem;}
.firstpoetic .dropcap {margin-right: 1rem;}

/* Tables */
table{margin-bottom:1rem;}
th,td{padding:.25rem;}
table,th,td{border: 1px solid black;border-collapse: collapse;}
th.left,td.left{text-align:left;}
th.center,td.center{text-align: center;}
th.right,td.right{text-align: right;}

/*VERTICAL SPACING */
html, body{height:100%;}
sup, sub {vertical-align: baseline; position: relative;top:-0.4em;}
sub {top: 0.4em;}

div.sidenote{margin-bottom:.75em;}
h2{font-size:1.75em;line-height: 2rem;margin-bottom:1rem;}
h3{font-size:1.4em;margin-bottom:1rem;margin-top:.4rem;line-height:2rem;}
ul, li, ol, dl{list-style:none;padding:0;}
ul {margin-top:.5rem;}
p{line-height:1.5em;padding-bottom:.5em;-webkit-margin-before:0em;-webkit-margin-after:0em;margin-top:0;margin-bottom:0;}
.scripture-text p{line-height:1.4em;}
 p+p.firstpoetic{margin-top:.75rem;}
.sidenote p{padding-bottom: .5em;}
.sidenote details p{padding-bottom:.1em;}
.scripture h3{margin-bottom:0.5em;}
article{padding-top:5em;padding-bottom:3em;min-height:40rem;}
.sidenote{margin-top:.7rem;}
.introduction{border-bottom:2px solid grey;margin-bottom:2em;}
div+section.scripture{margin-top:1.5rem;}
div.crossrefs details summary+p{margin-top:.4em;}
section{display:block;align-items:stretch;}
.fixedposition {position: fixed;}
.editcontent{overflow-y:auto;height: calc(100vh - 15rem);padding-left:4rem;padding-right:4rem;padding-bottom:4rem;white-space: pre-wrap;font-family: monospace;font-size: 1.25rem;line-height: 1.5rem;}
*:focus {outline: none;}
.poetic:last-child {padding-bottom:.5rem;}
/*HORIZONTAL SPACING */
article{width:60rem;padding-left:10rem;}
.scripture-comment p{margin-left:0;margin-right:0;}
.readingverse {position:absolute;left:17.5rem;}
.firstpoetic .readingverse {position:absolute;left:18.5rem;}
.poetic .readingverse {position:absolute;left:18.5rem;}
figure{-webkit-margin-start:0;-webkit-margin-end:0;}
figure.portrait, figure.square, .sidenote{display:block;float:right;width:26rem;}
figure.portrait, .sidenote{ border-left:2px solid #d3d3d3;}
.crossrefs+.sidenote{float:none;border:0;}
.rightside {margin-left:1%;}
img.portrait {float:right;}
img.portrait.leftside {float:none;}
img.sibling.landscape {margin-right:0; display:inline;}
ul.tabs, .definitionBlock div, .searchResults{width:48rem;}
.definitionBlock div{display:block;}
img.landscape{display:block;}
/*Left*/
.comment, #chaptertext p, #comments p, searchResults p, definitionBlock details, .scripture ul.tabs, .scripture-section{margin-left:8rem;}
table {margin-left:8.5rem;}
div.textquote table {margin-left:1.5rem;}
.flexTabs .tab li {
    margin-left: 2rem;
}
.nav{margin-left:.5rem;}
.versenav{margin-left:9rem;}
.textquote {margin-left:10rem;}
.menu{margin-left: 20rem;}
figure.portrait, figure.square, .sidenote{margin-left:2rem;}
div .crossrefs+div.sidenote{padding-left:0;}
img.landscape{margin-left:auto;}
img.landscape.rightside{margin-left:1%;}
.sidenote p, .sidenote h3, #comments .sidenote p, #comments .sidenote h3 {
    margin-left: 2rem; margin-right: 0;
}
/*Right*/
.comment, #chaptertext p, #comments p, searchResults p, definitionBlock details, .scripture ul.tabs, .scripture-section{margin-right:8rem;}
.flexTabs .tab li {margin-right:2rem;}
.textquote{margin-right:10rem;}
img.landscape{margin-right:auto;}
.sidenote p, .sidenote h3{margin-right:0;}

/*Poetic*/
.firstpoetic {
    padding-left: 1rem;
    text-indent: -1rem;
}
p.firstpoetic, p.poetic {
    padding-bottom: .1rem;
}
.poetic {
    padding-left: 2.5rem;
    text-indent: -1rem;
}
/*EDIT FORM*/
.editText{margin-bottom:-.5em;margin-top:-1em;}
textarea {
    font-family: monospace;
    font-size: 1.1em;
    width: 95%;
    padding: .5em;
}

.editbutton{display:block;padding-right:0px;}
.scrollBox {height:8em;overflow-y:scroll;margin-bottom:.5em; padding:.2em; border:1px solid black;}
#Heading{margin-top:-1em;}
.info {
    float: right;
    margin: -13rem;
    margin-top: -.25rem;
    display: block;
    width: 13rem;
}

/*HEADER */
.icon img, #search {
    zoom: 60%;
}
.indexicon img{max-height:1.5rem;position:absolute;bottom:.25rem;right: 20rem;}
header{width:100%;height:auto;position:fixed;top:0px;left:0px;background-color:#1A237E;opacity:.9;z-index:100000;align-content: center;}
#searchbar{padding:0;float:left;z-index:2000}
#searchField{font-size: 1.5rem;padding-top: .5rem;background-color: #1A237E; color: white;}
#searchbar input{border: 0;border-bottom: 1px solid #d3d3d3;}
#searchbar input:focus{outline: none;}
#search:hover {
    border-bottom: 1px solid #d3d3d3;
}
#toolbarSearchField{float:left;padding-right: 1rem;}
#toolbarSearchButton{float:left;padding-right: .5rem;margin-top:.5rem;}
#toolbarSearchButton button{background-color: #1A237E;border:0;height:3rem;}
#search{color:transparent;padding:0;background-position:center center;background-repeat:no-repeat;background-image:url(../Images/search.png);border-bottom: 1px solid #555;}
.menu{display: block;padding-top:.5rem;z-index:2000}
.menu ul{margin:0;display: inline-block;margin-top:.5rem;margin-left:.5rem;}
.menu li{float:left;position: relative;width: 3rem;margin:0 0 1rem 0;padding: 0;border-bottom: 1px solid #1A237E;}
.menu li:hover{border-bottom: 1px solid #d3d3d3;top: -1px}
.menu li ul{display:none;width:12em;border-top:0px;overflow:auto;overflow-x:hidden;position:absolute;margin:0;padding:0;}
.menu li:hover li{float:none;}
#menuPrevious {display:block; opacity: 0; position:  absolute;top: 0;left: 0;width: 5rem;height:100vh;}
#menuPrevious.hidden {display:none;}
#menuPrevious:hover {background-color: black;opacity: .1;z-index:1010;}
#menuPrevious img{position: absolute; top:50%;}
/* ... */

